cargo_test.errors
warning: unexpected `cfg` condition name: `fuzzing`
   --> C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:449:7
    |
449 | #[cfg(fuzzing)]
    |       ^^^^^^^
    |
    = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
    = help: consider using a Cargo feature instead
    = help: or consider adding in `Cargo.toml` the `check-cfg` lint config for the lint:
             [lints.rust]
             unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
    = help: or consider adding `println!("cargo::rustc-check-cfg=cfg(fuzzing)");` to the top of the `build.rs`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

warning: `age` (lib) generated 1 warning
   Compiling age-xwing v0.1.0 (C:\Users\chadm\Projects\age-xwing)
warning: unused import: `FileKey`
  --> tests\interop_tests.rs:14:24
   |
14 | use age_core::format::{FileKey, Stanza};
   |                        ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0616]: field `pub_key` of struct `HybridRecipient` is private
  --> tests\interop_tests.rs:33:19
   |
33 |         recipient.pub_key.to_bytes(),
   |                   ^^^^^^^ private field

error[E0616]: field `pub_key` of struct `HybridRecipient` is private
  --> tests\interop_tests.rs:34:26
   |
34 |         parsed_recipient.pub_key.to_bytes()
   |                          ^^^^^^^ private field

error[E0616]: field `seed` of struct `HybridIdentity` is private
  --> tests\interop_tests.rs:39:18
   |
39 |         identity.seed.expose_secret(),
   |                  ^^^^ private field

error[E0616]: field `seed` of struct `HybridIdentity` is private
  --> tests\interop_tests.rs:40:25
   |
40 |         parsed_identity.seed.expose_secret()
   |                         ^^^^ private field

error[E0599]: no function or associated item named `with_recipient` found for struct `Encryptor` in the current scope
  --> tests\interop_tests.rs:50:32
   |
50 |     let encryptor = Encryptor::with_recipient(Box::new(recipient)).unwrap();
   |                                ^^^^^^^^^^^^^^ function or associated item not found in `Encryptor`
   |
note: if you're trying to build a new `Encryptor` consider using one of the following associated functions:
      Encryptor::with_user_passphrase
      Encryptor::with_recipients
  --> C:\Users\chadm\Projects\age\age-rs\age\src\protocol.rs:66:5
   |
66 |       pub fn with_user_passphrase(passphrase: SecretString) -> Self {
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
73 | /     pub fn with_recipients<'a>(
74 | |         recipients: impl Iterator<Item = &'a dyn Recipient>,
75 | |     ) -> Result<Self, EncryptError> {
   | |___________________________________^
help: there is an associated function `with_recipients` with a similar name
   |
50 |     let encryptor = Encryptor::with_recipients(Box::new(recipient)).unwrap();
   |                                              +

error[E0277]: `HybridIdentity` is not an iterator
   --> tests\interop_tests.rs:58:40
    |
 58 |     let mut reader = decryptor.decrypt(Box::new(identity)).unwrap();
    |                                ------- ^^^^^^^^^^^^^^^^^^ `HybridIdentity` is not an iterator
    |                                |
    |                                required by a bound introduced by this call
    |
    = help: the trait `Iterator` is not implemented for `HybridIdentity`
    = note: required for `Box<HybridIdentity>` to implement `Iterator`
note: required by a bound in `Decryptor::<R>::decrypt`
   --> C:\Users\chadm\Projects\age\age-rs\age\src\protocol.rs:243:26
    |
241 |     pub fn decrypt<'a>(
    |            ------- required by a bound in this associated function
242 |         self,
243 |         identities: impl Iterator<Item = &'a dyn Identity>,
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Decryptor::<R>::decrypt`

error[E0599]: no method named `unwrap_stanzas` found for struct `HybridIdentity` in the current scope
   --> tests\interop_tests.rs:82:36
    |
 82 |     if let Some(result) = identity.unwrap_stanzas(&[stanza]) {
    |                                    ^^^^^^^^^^^^^^
    |
   ::: C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:316:8
    |
316 |     fn unwrap_stanzas(&self, stanzas: &[Stanza]) -> Option<Result<FileKey, DecryptError>> {
    |        -------------- the method is available for `HybridIdentity` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Identity` which provides `unwrap_stanzas` is implemented but not in scope; perhaps you want to import it
    |
 13 + use age::Identity;
    |
help: there is a method `unwrap_stanza` with a similar name
    |
 82 -     if let Some(result) = identity.unwrap_stanzas(&[stanza]) {
 82 +     if let Some(result) = identity.unwrap_stanza(&[stanza]) {
    |

error[E0282]: type annotations needed
  --> tests\interop_tests.rs:83:29
   |
83 |         let decrypted_key = result.unwrap();
   |                             ^^^^^^ cannot infer type

error[E0599]: no method named `unwrap_stanzas` found for struct `HybridIdentity` in the current scope
   --> tests\interop_tests.rs:99:27
    |
 99 |     let result = identity.unwrap_stanzas(&[invalid_stanza]);
    |                           ^^^^^^^^^^^^^^
    |
   ::: C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:316:8
    |
316 |     fn unwrap_stanzas(&self, stanzas: &[Stanza]) -> Option<Result<FileKey, DecryptError>> {
    |        -------------- the method is available for `HybridIdentity` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Identity` which provides `unwrap_stanzas` is implemented but not in scope; perhaps you want to import it
    |
 13 + use age::Identity;
    |
help: there is a method `unwrap_stanza` with a similar name
    |
 99 -     let result = identity.unwrap_stanzas(&[invalid_stanza]);
 99 +     let result = identity.unwrap_stanza(&[invalid_stanza]);
    |

error[E0599]: no method named `unwrap_stanzas` found for struct `HybridIdentity` in the current scope
   --> tests\interop_tests.rs:112:27
    |
112 |     let result = identity.unwrap_stanzas(&[malformed_stanza]);
    |                           ^^^^^^^^^^^^^^
    |
   ::: C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:316:8
    |
316 |     fn unwrap_stanzas(&self, stanzas: &[Stanza]) -> Option<Result<FileKey, DecryptError>> {
    |        -------------- the method is available for `HybridIdentity` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Identity` which provides `unwrap_stanzas` is implemented but not in scope; perhaps you want to import it
    |
 13 + use age::Identity;
    |
help: there is a method `unwrap_stanza` with a similar name
    |
112 -     let result = identity.unwrap_stanzas(&[malformed_stanza]);
112 +     let result = identity.unwrap_stanza(&[malformed_stanza]);
    |

error[E0599]: no function or associated item named `with_recipient` found for struct `Encryptor` in the current scope
   --> tests\interop_tests.rs:136:32
    |
136 |     let encryptor = Encryptor::with_recipient(Box::new(recipient1)).unwrap();
    |                                ^^^^^^^^^^^^^^ function or associated item not found in `Encryptor`
    |
note: if you're trying to build a new `Encryptor` consider using one of the following associated functions:
      Encryptor::with_user_passphrase
      Encryptor::with_recipients
   --> C:\Users\chadm\Projects\age\age-rs\age\src\protocol.rs:66:5
    |
 66 |       pub fn with_user_passphrase(passphrase: SecretString) -> Self {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 73 | /     pub fn with_recipients<'a>(
 74 | |         recipients: impl Iterator<Item = &'a dyn Recipient>,
 75 | |     ) -> Result<Self, EncryptError> {
    | |___________________________________^
help: there is an associated function `with_recipients` with a similar name
    |
136 |     let encryptor = Encryptor::with_recipients(Box::new(recipient1)).unwrap();
    |                                              +

error[E0277]: `HybridIdentity` is not an iterator
   --> tests\interop_tests.rs:144:40
    |
144 |     let mut reader = decryptor.decrypt(Box::new(identity1)).unwrap();
    |                                ------- ^^^^^^^^^^^^^^^^^^^ `HybridIdentity` is not an iterator
    |                                |
    |                                required by a bound introduced by this call
    |
    = help: the trait `Iterator` is not implemented for `HybridIdentity`
    = note: required for `Box<HybridIdentity>` to implement `Iterator`
note: required by a bound in `Decryptor::<R>::decrypt`
   --> C:\Users\chadm\Projects\age\age-rs\age\src\protocol.rs:243:26
    |
241 |     pub fn decrypt<'a>(
    |            ------- required by a bound in this associated function
242 |         self,
243 |         identities: impl Iterator<Item = &'a dyn Identity>,
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Decryptor::<R>::decrypt`

Some errors have detailed explanations: E0277, E0282, E0599, E0616.
For more information about an error, try `rustc --explain E0277`.
warning: `age-xwing` (test "interop_tests") generated 1 warning
error: could not compile `age-xwing` (test "interop_tests") due to 12 previous errors; 1 warning emitted
